Support for locally uploaded books
Bug: T240683
Change-Id: I62bc423090e61c4d2e5c7aaeefa6f5ea94749fe6

--- a/templates/read.html
+++ b/templates/read.html
@@ -38,7 +38,11 @@
         var bookname = urlbook.split('/').pop();
         urlbook = urlbook.split('/');
         urlbook.pop();
-        urlbook = urlbook.join('/').replace('commons', 'commons/thumb');
+        if( '{{ data["project"] }}' === 'commons'){
+            urlbook = urlbook.join('/').replace( 'commons', 'commons/thumb');
+        } else {
+            urlbook = urlbook.join('/').replace( '{{ data["lang"] }}', '{{ data["lang"] }}/thumb');
+        }
 
         var options = {
             getNumLeafs: function() {
