Allow users to write file name without File Prefix
Bug: T241489
Change-Id: I3fdb58d9fd56276e81476face76c106215c93904

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
             document.getElementById("submit_by_name").onclick=function(){
                 lang = document.getElementById("project").value;
                 filename = document.getElementById("filename").value;
-                window.location = "https://tools.wmflabs.org/bookreader/"+ lang +"/" + filename
+                window.location = "{{ url_for('index') }}"+ lang +"/" + filename
             }
         }
     </script>
