--- a/templates/read.html
+++ b/templates/read.html
@@ -5,6 +5,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/BookReader-favicon.svg/48px-BookReader-favicon.svg.png">
 
     <!-- JS dependencies -->
     <script src="{{ url_for('static', filename='BookReader/jquery-1.10.1.js') }}"></script>
