--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title> {{ _('bookreader-name') }} </title>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/BookReader-favicon.svg/48px-BookReader-favicon.svg.png">
-
+{% extends 'base.html' %}
+{% block head %}
+    {{ super() }}
     <link href="https://tools-static.wmflabs.org/cdnjs/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://tools-static.wmflabs.org/cdnjs/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
     <script src="https://tools-static.wmflabs.org/cdnjs/ajax/libs/jquery/3.3.1/jquery.js"></script>
@@ -61,120 +55,114 @@
             margin-left: 10px;
         }
     </style>
-</head>
-<body>
-    <nav class="navbar navbar-dark bg-dark">
-        <span class="navbar-brand mb-0 h1">{{ _('bookreader-heading') }}</span>
-        <div class="my-2 my-lg-0">
-            <a class="btn btn-secondary" href="{{ url_for('changelang') }}" style="float: right;"> {{ _('changelanguage') }}</a>
-        </div>
-    </nav>
-    <div class="container col-lg-6 p-3 bg-white shadow rounded">
-        <form action="{{ url_for('read') }}" method="GET">
-            <div class="form-group">
-                <input class="form-control" name="file" type="url" required
-                placeholder="{{ _('byurl-placeholder') }}">
-            </div>
-            <button class="btn btn-outline-primary" type="submit">{{ _('form-submit') }}</button>
-        </form>
+{% endblock %}
 
-        <br>
-        <div class="center-separator">{{ _('or-text') }}</div>
-        <br>
+{% block content %}
+<div class="container col-lg-6 p-3 bg-white shadow rounded">
+    <form action="{{ url_for('read') }}" method="GET">
         <div class="form-group">
-            <label for="project">{{ _('wiki-projects') }}</label>
-            <select class="form-control" id="project" name="project">
-                <option value="pl">{{ _('lang-pl') }}</option>
-                <option value="en">{{ _('lang-en') }}</option>
-                <option value="ru">{{ _('lang-ru') }}</option>
-                <option value="de">{{ _('lang-de') }}</option>
-                <option value="fr">{{ _('lang-fr') }}</option>
-                <option value="zh">{{ _('lang-zh') }}</option>
-                <option value="he">{{ _('lang-he') }}</option>
-                <option value="it">{{ _('lang-it') }}</option>
-                <option value="es">{{ _('lang-es') }}</option>
-                <option value="ar">{{ _('lang-ar') }}</option>
-                <option value="uk">{{ _('lang-uk') }}</option>
-                <option value="cs">{{ _('lang-cs') }}</option>
-                <option value="gu">{{ _('lang-gu') }}</option>
-                <option value="sr">{{ _('lang-sr') }}</option>
-                <option value="pt">{{ _('lang-pt') }}</option>
-                <option value="sv">{{ _('lang-sv') }}</option>
-                <option value="fa">{{ _('lang-fa') }}</option>
-                <option value="hu">{{ _('lang-hu') }}</option>
-                <option value="ko">{{ _('lang-ko') }}</option>
-                <option value="bn">{{ _('lang-bn') }}</option>
-                <option value="ml">{{ _('lang-ml') }}</option>
-                <option value="sa">{{ _('lang-sa') }}</option>
-                <option value="ta">{{ _('lang-ta') }}</option>
-                <option value="te">{{ _('lang-te') }}</option>
-                <option value="sl">{{ _('lang-sl') }}</option>
-                <option value="tr">{{ _('lang-tr') }}</option>
-                <option value="hy">{{ _('lang-hy') }}</option>
-                <option value="el">{{ _('lang-el') }}</option>
-                <option value="la">{{ _('lang-la') }}</option>
-                <option value="vi">{{ _('lang-vi') }}</option>
-                <option value="ja">{{ _('lang-ja') }}</option>
-                <option value="ro">{{ _('lang-ro') }}</option>
-                <option value="fi">{{ _('lang-fi') }}</option>
-                <option value="nap">{{ _('lang-nap') }}</option>
-                <option value="nl">{{ _('lang-nl') }}</option>
-                <option value="az">{{ _('lang-az') }}</option>
-                <option value="ca">{{ _('lang-ca') }}</option>
-                <option value="br">{{ _('lang-br') }}</option>
-                <option value="kn">{{ _('lang-kn') }}</option>
-                <option value="hr">{{ _('lang-hr') }}</option>
-                <option value="no">{{ _('lang-no') }}</option>
-                <option value="th">{{ _('lang-th') }}</option>
-                <option value="id">{{ _('lang-id') }}</option>
-                <option value="be">{{ _('lang-be') }}</option>
-                <option value="eo">{{ _('lang-eo') }}</option>
-                <option value="hi">{{ _('lang-hi') }}</option>
-                <option value="is">{{ _('lang-is') }}</option>
-                <option value="vec">{{ _('lang-vec') }}</option>
-                <option value="pms">{{ _('lang-pms') }}</option>
-                <option value="ban">{{ _('lang-ban') }}</option>
-                <option value="lij">{{ _('lang-lij') }}</option>
-                <option value="da">{{ _('lang-da') }}</option>
-                <option value="et">{{ _('lang-et') }}</option>
-                <option value="mr">{{ _('lang-mr') }}</option>
-                <option value="mk">{{ _('lang-mk') }}</option>
-                <option value="cy">{{ _('lang-cy') }}</option>
-                <option value="yi">{{ _('lang-yi') }}</option>
-                <option value="as">{{ _('lang-as') }}</option>
-                <option value="bg">{{ _('lang-bg') }}</option>
-                <option value="li">{{ _('lang-li') }}</option>
-                <option value="lt">{{ _('lang-lt') }}</option>
-                <option value="jv">{{ _('lang-jv') }}</option>
-                <option value="wa">{{ _('lang-wa') }}</option>
-                <option value="pa">{{ _('lang-pa') }}</option>
-                <option value="eu">{{ _('lang-eu') }}</option>
-                <option value="or">{{ _('lang-or') }}</option>
-                <option value="gl">{{ _('lang-gl') }}</option>
-                <option value="bs">{{ _('lang-bs') }}</option>
-                <option value="sah">{{ _('lang-sah') }}</option>
-                <option value="sk">{{ _('lang-sk') }}</option>
-                <option value="zh-min-nan">{{ _('lang-zh-min-nan') }}</option>
-                <option value="ht">{{ _('lang-ht') }}</option>
-                <option value="fo">{{ _('lang-fo') }}</option>
-                <option value="ang">{{ _('lang-ang') }}</option>
-            </select>
-            <label for="filename" style="padding-top: 5px;">{{ _('label-filename') }}</label>
-            <input class="form-control" type="text" id="filename"
-            placeholder="{{ _('filename-placeholder') }}">
-            <small><small>{{ _('localfile-notice') }}</small></small>
-            <br><br>
-            <a id="submit_by_name" class="btn btn-outline-info">{{ _('form-submit') }}</a>
+            <input class="form-control" name="file" type="url" required
+            placeholder="{{ _('byurl-placeholder') }}">
         </div>
-    </div>
+        <button class="btn btn-outline-primary" type="submit">{{ _('form-submit') }}</button>
+    </form>
 
-    <footer class="footer fixed-bottom">
-        <p class="container text-center"><small>Created and maintained by
-            <a href="https://meta.wikimedia.org/wiki/User:Jayprakash12345">Jayprakash</a>,
-            <a href="https://meta.wikimedia.org/wiki/Indic-TechCom">Indic-TechCom</a> (
-            <a href="https://gerrit.wikimedia.org/g/labs/tools/bookreader">View Source</a> ), Viewer Powered by
-            <a href="https://github.com/internetarchive/bookreader">Internet Archive BookReader</a></small>
-        </p>
-    </footer>
-</body>
-</html>
+    <br>
+    <div class="center-separator">{{ _('or-text') }}</div>
+    <br>
+    <div class="form-group">
+        <label for="project">{{ _('wiki-projects') }}</label>
+        <select class="form-control" id="project" name="project">
+            <option value="pl">{{ _('lang-pl') }}</option>
+            <option value="en">{{ _('lang-en') }}</option>
+            <option value="ru">{{ _('lang-ru') }}</option>
+            <option value="de">{{ _('lang-de') }}</option>
+            <option value="fr">{{ _('lang-fr') }}</option>
+            <option value="zh">{{ _('lang-zh') }}</option>
+            <option value="he">{{ _('lang-he') }}</option>
+            <option value="it">{{ _('lang-it') }}</option>
+            <option value="es">{{ _('lang-es') }}</option>
+            <option value="ar">{{ _('lang-ar') }}</option>
+            <option value="uk">{{ _('lang-uk') }}</option>
+            <option value="cs">{{ _('lang-cs') }}</option>
+            <option value="gu">{{ _('lang-gu') }}</option>
+            <option value="sr">{{ _('lang-sr') }}</option>
+            <option value="pt">{{ _('lang-pt') }}</option>
+            <option value="sv">{{ _('lang-sv') }}</option>
+            <option value="fa">{{ _('lang-fa') }}</option>
+            <option value="hu">{{ _('lang-hu') }}</option>
+            <option value="ko">{{ _('lang-ko') }}</option>
+            <option value="bn">{{ _('lang-bn') }}</option>
+            <option value="ml">{{ _('lang-ml') }}</option>
+            <option value="sa">{{ _('lang-sa') }}</option>
+            <option value="ta">{{ _('lang-ta') }}</option>
+            <option value="te">{{ _('lang-te') }}</option>
+            <option value="sl">{{ _('lang-sl') }}</option>
+            <option value="tr">{{ _('lang-tr') }}</option>
+            <option value="hy">{{ _('lang-hy') }}</option>
+            <option value="el">{{ _('lang-el') }}</option>
+            <option value="la">{{ _('lang-la') }}</option>
+            <option value="vi">{{ _('lang-vi') }}</option>
+            <option value="ja">{{ _('lang-ja') }}</option>
+            <option value="ro">{{ _('lang-ro') }}</option>
+            <option value="fi">{{ _('lang-fi') }}</option>
+            <option value="nap">{{ _('lang-nap') }}</option>
+            <option value="nl">{{ _('lang-nl') }}</option>
+            <option value="az">{{ _('lang-az') }}</option>
+            <option value="ca">{{ _('lang-ca') }}</option>
+            <option value="br">{{ _('lang-br') }}</option>
+            <option value="kn">{{ _('lang-kn') }}</option>
+            <option value="hr">{{ _('lang-hr') }}</option>
+            <option value="no">{{ _('lang-no') }}</option>
+            <option value="th">{{ _('lang-th') }}</option>
+            <option value="id">{{ _('lang-id') }}</option>
+            <option value="be">{{ _('lang-be') }}</option>
+            <option value="eo">{{ _('lang-eo') }}</option>
+            <option value="hi">{{ _('lang-hi') }}</option>
+            <option value="is">{{ _('lang-is') }}</option>
+            <option value="vec">{{ _('lang-vec') }}</option>
+            <option value="pms">{{ _('lang-pms') }}</option>
+            <option value="ban">{{ _('lang-ban') }}</option>
+            <option value="lij">{{ _('lang-lij') }}</option>
+            <option value="da">{{ _('lang-da') }}</option>
+            <option value="et">{{ _('lang-et') }}</option>
+            <option value="mr">{{ _('lang-mr') }}</option>
+            <option value="mk">{{ _('lang-mk') }}</option>
+            <option value="cy">{{ _('lang-cy') }}</option>
+            <option value="yi">{{ _('lang-yi') }}</option>
+            <option value="as">{{ _('lang-as') }}</option>
+            <option value="bg">{{ _('lang-bg') }}</option>
+            <option value="li">{{ _('lang-li') }}</option>
+            <option value="lt">{{ _('lang-lt') }}</option>
+            <option value="jv">{{ _('lang-jv') }}</option>
+            <option value="wa">{{ _('lang-wa') }}</option>
+            <option value="pa">{{ _('lang-pa') }}</option>
+            <option value="eu">{{ _('lang-eu') }}</option>
+            <option value="or">{{ _('lang-or') }}</option>
+            <option value="gl">{{ _('lang-gl') }}</option>
+            <option value="bs">{{ _('lang-bs') }}</option>
+            <option value="sah">{{ _('lang-sah') }}</option>
+            <option value="sk">{{ _('lang-sk') }}</option>
+            <option value="zh-min-nan">{{ _('lang-zh-min-nan') }}</option>
+            <option value="ht">{{ _('lang-ht') }}</option>
+            <option value="fo">{{ _('lang-fo') }}</option>
+            <option value="ang">{{ _('lang-ang') }}</option>
+        </select>
+        <label for="filename" style="padding-top: 5px;">{{ _('label-filename') }}</label>
+        <input class="form-control" type="text" id="filename"
+        placeholder="{{ _('filename-placeholder') }}">
+        <small><small>{{ _('localfile-notice') }}</small></small>
+        <br><br>
+        <a id="submit_by_name" class="btn btn-outline-info">{{ _('form-submit') }}</a>
+    </div>
+</div>
+
+<footer class="footer fixed-bottom">
+    <p class="container text-center"><small>Created and maintained by
+        <a href="https://meta.wikimedia.org/wiki/User:Jayprakash12345">Jayprakash</a>,
+        <a href="https://meta.wikimedia.org/wiki/Indic-TechCom">Indic-TechCom</a> (
+        <a href="https://gerrit.wikimedia.org/g/labs/tools/bookreader">View Source</a> ), Viewer Powered by
+        <a href="https://github.com/internetarchive/bookreader">Internet Archive BookReader</a></small>
+    </p>
+</footer>
+{% endblock %}
